css/custom.css
/* Custom.css < Do your own thing! */

body {
    background: transparent;
}

.navbar {
    padding: 0.5rem 1rem 0.5rem 0rem;
}


@media screen and (max-width: 1024px) {
    .navbar {
        padding: 1rem 2rem 1rem 1.5rem;
    }
}

@media screen and (max-width: 768px) {
    .navbar {
        padding-left: 1rem !important;
        padding-right: 1rem !important;
    }
}


/**
 * Footer
 **/
a.instagram-link {
    display: flex;
    flex-wrap: nowrap;
    position: absolute;
    right: 2rem;
    left: auto;
    bottom: 2rem;
    text-decoration: none;
}

a.instagram-link p {
    visibility: hidden;
    opacity: 0;
    transition: all 0.4s;
    transform: translateX(10px);
}

a.instagram-link:hover p {
    opacity: 1;
    visibility: visible;
    transform: translateX(0);
}


@media screen and (max-width: 1024px) {
    a.instagram-link {
        right: 1.5em;
        bottom: 1.5em;
    }

    footer.fixed-bottom,
    footer.fixed-bottom.alt-footer {
        position: fixed;
    }

    .dark-slide footer.fixed-bottom *,
    .dark-slide footer.fixed-bottom.alt-footer * {
        color: white !important;
    }

    footer.fixed-bottom .text-right,
    footer.fixed-bottom.alt-footer .text-right {
        text-align: auto !important;
    }

}

@media screen and (max-width: 768px) {
    a.instagram-link {
        right: 1em;
        bottom: 1em;
    }
}

/**
 * Copyrights
 **/
.home div.copyrights {
    display: none;
}

div.copyrights {
    width: 100%;
    text-align: center;
}

@media (max-width: 840px) {
    div div.copyrights {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
}


/**
 * Typo
 **/
.semi-massive {
    font-size: 5rem;
    font-weight: 900;
    letter-spacing: -0.07em;
    line-height: 1.0;
    text-indent: -0.039em;
    margin-bottom: 0.25em;
}

@media (max-width: 840px) {
    .semi-massive {
        font-size: 3.5rem;
    }
}

/**
 * Slides
 **/
li.glide__slide div.bg div {
    width: 100%;
    height: 100vh;
}

li.glide__slide div.bg div img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.glide .glide__bullets {
    position: fixed;
    left: 2em;
    bottom: 2em;
}

.glide__bullets {
    padding-bottom: 16px;
}

.glide__slide {
    overflow: hidden;
}

@media screen and (max-width: 1024px) {
    .glide .glide__bullets {
        left: 1.5em;
        bottom: 1.5em;
    }
}

@media screen and (max-width: 768px) {
    .glide .glide__bullets {
        left: 1em;
        bottom: 1em;
    }
}


@media (max-width: 840px) {

    .dekstop,
    div.desktop {
        display: none;
    }
}

@media (min-width: 840px) {

    .mobile,
    div.mobile {
        display: none;
    }
}

.glide .glide__slide .bg {
    transition: opacity 1s 0.5s;
}

.glide .glide__slide:not(.glide__slide--active) .bg {
    transition: opacity 0s 0s;
    opacity: 0;
}

.glide .glide__slide h1,
.glide .glide__slide h2,
.glide .glide__slide h3,
.glide .glide__slide h4,
.glide .glide__slide h5,
.glide .glide__slide h6,
.glide .glide__slide p,
.glide .glide__slide img {
    opacity: 0 !important;
    transform: translateX(-20px) !important;
}

.glide .glide__slide--active h1,
.glide .glide__slide--active h2,
.glide .glide__slide--active h3,
.glide .glide__slide--active h4,
.glide .glide__slide--active h5,
.glide .glide__slide--active h6,
.glide .glide__slide--active p,
.glide .glide__slide--active img {
    opacity: 1 !important;
    transform: translateY(0) !important;
}

.glide .glide__slide h1:nth-child(1),
.glide .glide__slide h2:nth-child(1),
.glide .glide__slide h3:nth-child(1),
.glide .glide__slide h4:nth-child(1),
.glide .glide__slide h5:nth-child(1),
.glide .glide__slide h6:nth-child(1),
.glide .glide__slide p:nth-child(1),
.glide .glide__slide img:nth-child(1) {
    transition: all 0.6s 0.25s;
}

.glide .glide__slide h1:nth-child(2),
.glide .glide__slide h2:nth-child(2),
.glide .glide__slide h3:nth-child(2),
.glide .glide__slide h4:nth-child(2),
.glide .glide__slide h5:nth-child(2),
.glide .glide__slide h6:nth-child(2),
.glide .glide__slide p:nth-child(2),
.glide .glide__slide img:nth-child(2) {
    transition: all 1s 0.9s;
}

.glide .glide__slide h1:nth-child(3),
.glide .glide__slide h2:nth-child(3),
.glide .glide__slide h3:nth-child(3),
.glide .glide__slide h4:nth-child(3),
.glide .glide__slide h5:nth-child(3),
.glide .glide__slide h6:nth-child(3),
.glide .glide__slide p:nth-child(3),
.glide .glide__slide img:nth-child(3) {
    transition: all 1s 1.35s;
}

.glide .glide__slide h1:nth-child(4),
.glide .glide__slide h2:nth-child(4),
.glide .glide__slide h3:nth-child(4),
.glide .glide__slide h4:nth-child(4),
.glide .glide__slide h5:nth-child(4),
.glide .glide__slide h6:nth-child(4),
.glide .glide__slide p:nth-child(4),
.glide .glide__slide img:nth-child(4) {
    transition: all 1s 1.8s;
}

.glide .glide__slide h1:nth-child(5),
.glide .glide__slide h2:nth-child(5),
.glide .glide__slide h3:nth-child(5),
.glide .glide__slide h4:nth-child(5),
.glide .glide__slide h5:nth-child(5),
.glide .glide__slide h6:nth-child(5),
.glide .glide__slide p:nth-child(5),
.glide .glide__slide img:nth-child(5) {
    transition: all 1s 2.25s;
}

.glide .glide__slide h1:nth-child(6),
.glide .glide__slide h2:nth-child(6),
.glide .glide__slide h3:nth-child(6),
.glide .glide__slide h4:nth-child(6),
.glide .glide__slide h5:nth-child(6),
.glide .glide__slide h6:nth-child(6),
.glide .glide__slide p:nth-child(6),
.glide .glide__slide img:nth-child(6) {
    transition: all 1s 2.7s;
}

.glide .glide__slide h1:nth-child(7),
.glide .glide__slide h2:nth-child(7),
.glide .glide__slide h3:nth-child(7),
.glide .glide__slide h4:nth-child(7),
.glide .glide__slide h5:nth-child(7),
.glide .glide__slide h6:nth-child(7),
.glide .glide__slide p:nth-child(7),
.glide .glide__slide img:nth-child(7) {
    transition: all 1s 3.15s;
}

.glide .glide__slide h1:nth-child(8),
.glide .glide__slide h2:nth-child(8),
.glide .glide__slide h3:nth-child(8),
.glide .glide__slide h4:nth-child(8),
.glide .glide__slide h5:nth-child(8),
.glide .glide__slide h6:nth-child(8),
.glide .glide__slide p:nth-child(8),
.glide .glide__slide img:nth-child(8) {
    transition: all 1s 3.6s;
}

.glide .glide__slide h1:nth-child(9),
.glide .glide__slide h2:nth-child(9),
.glide .glide__slide h3:nth-child(9),
.glide .glide__slide h4:nth-child(9),
.glide .glide__slide h5:nth-child(9),
.glide .glide__slide h6:nth-child(9),
.glide .glide__slide p:nth-child(9),
.glide .glide__slide img:nth-child(9) {
    transition: all 1s 4.05s;
}

.glide .glide__slide--active .bg {
    animation: scale 20s 1s infinite both;
}

/**
 * Artist
 **/
.artist .artist-photo {
    width: 360px;
}

@media (max-width: 840px) {
    .artist .artist-photo {
        width: 100%;
    }
}

/**
 * Contact
 **/
.contact .address {
    text-align: center;
}

.contact .address table {
    margin-left: auto;
    margin-right: auto;
}

.contact td:first-child {
    text-align: right;
}

.contact td:last-child {
    text-align: left;
}

.contact td {
    padding-left: 8px;
    padding-right: 8px;
}

/**
 * Photos
 **/
.photos-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.photos-container .photo {
    text-decoration: none;
    position: relative;
    width: 25%;
    background-color: #141414;
}

.photos-container .photo img {
    transition: opacity 0.3s;
    object-fit: cover;
    width: 100%;
}

.photos-container .photo .caption {
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 2;
    opacity: 0;
    transition: opacity 0.3s;
    backdrop-filter: saturate(180%) blur(15px);
    color: white;
    vertical-align: bottom;
    display: flex;
    align-items: flex-end;
}

.photos-container .photo:hover img {
    opacity: 0.5;
}

.photos-container .photo:hover .caption {
    opacity: 1;
}

@media (max-width: 1280px) {
    .photos-container .photo {
        width: 33.3%;
    }
}

@media (max-width: 1024px) {
    .photos-container .photo {
        width: 50%;
    }
}

@media (max-width: 840px) {
    .photos-container .photo {
        width: 100%;
    }

    .photos-container .photo .caption {
        opacity: 0.75;
        top: auto;

        backdrop-filter: blur(15px);
    }
}

/**
 * Painting
 **/
.portfolio:first-child {
    padding-top: 1.5rem;
}

.portfolio:last-child {
    padding-bottom: 6rem;
}

.paiting-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.paiting-container .photo-container {
    max-width: 50%;
    display: block;
    position: relative;
}

.paiting-container .photo-container .photo {
    width: 100%;
}

.paiting-container .description-container {
    max-width: 50%;
    display: block;
    position: relative;
    padding-left: 2.5%;
    padding-right: 2.5%;
}

.paiting-container .description-container>h1 {
    padding-top: 15rem;
    padding-bottom: 0rem;
}

@media (max-width: 840px) {
    .portfolio:first-child {
        padding-top: 1.5rem;
    }

    .portfolio:last-child {
        padding-bottom: 0rem;
    }

    .paiting-container .photo-container {
        max-width: 100%;
    }

    .paiting-container .description-container {
        max-width: 100%;
        padding-left: 5%;
        padding-right: 5%;
    }

    .paiting-container .description-container:after {
        content: ". . .";
        width: 100%;
        text-align: center;
        display: block;
        padding-top: 3rem;
        padding-bottom: 3rem;
    }

    .paiting-container .description-container>h1 {
        padding-top: 1rem;
        padding-bottom: 1rem;
        margin-bottom: 0.5rem;
    }
}

/**
 * Blogs
 */
 
.blog:first-child {
    padding-top: 1.5rem;
}

.blog {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    align-items: flex-start;
}

.blog .image-container {
    position: relative;
    background-color: #141414;
    margin: 10% 0 0 10%;
}

.blog .image-container img {
    transition: opacity 0.3s;
    object-fit: cover;
    width: 100%;
    opacity: 1;
}

.blog .image-container:hover img {
    opacity: 0.5;
}

.blog .image-container .blur {
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 2;
    opacity: 0;
    transition: opacity 0.3s;
    backdrop-filter: saturate(180%) blur(15px);
    color: white;
    vertical-align: bottom;
    display: flex;
    align-items: flex-end;
}

.blog .image-container:hover .blur {
    opacity: 1;
}

.blog .description-container {
    position: relative;
    padding: 20% 10% 10% 10%;
}

.blog .description-container>h1 {
    font-size: 3.5rem;
    padding-bottom: 1rem;
}


@media (max-width: 1600px) {
    .blog {
        grid-template-columns: 1fr 1fr;        
    }

    .blog .image-container {
        margin: 10% 0 0 5%;
    }

    .blog .description-container {
        padding: 15% 5% 5% 5%;
    }
}

@media (max-width: 840px) {
    .blog {
        grid-template-columns: 1fr;
    }

    .blog .image-container {
        margin: 5% 2.5% 0 2.5%;
    }

    .blog .description-container {
        padding: 5% 2.5% 5% 2.5%;
    }
}


/**
 * Grids
 **/
.grid .grid-item:after {
    content: "";
    display: block;
    padding-bottom: 100%;
}

.grid .grid-item img {
    background: #ffffff;
    transition: opacity 0.3s;
    display: block;
    position: absolute;
    /* Take your picture out of the flow */
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    /* Make the picture taking the size of it's parent */
    width: 100%;
    /* This if for the object-fit */
    height: 100%;
    /* This if for the object-fit */
    object-fit: contain;
    /* Equivalent of the background-size: cover; of a background-image */
    object-position: center;
}

